k8s-yaml/deploy-web.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 10
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: 'maho/session-check:1.2'
          name: check-apl
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web
  ports:
    - port: 9080
      targetPort: 80
