k8s-yaml/lb-mz.yml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
