k8s-yaml/lb-sz.yml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
    service.kubernetes.io/ibm-load-balancer-cloud-provider-vlan: "2445837"
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  loadBalancerIP: 165.192.71.202
