k8s-yaml/ingress-mz.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web
spec:
  rules:
  - host: iks1.jp-tok.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: web-svc
          servicePort: 9080
